--- a/index.html
+++ b/index.html
@@ -73,3 +73,14 @@ window.onscroll = function() {
         header.classList.remove('navbarDark');
     }
 }
+<!-- footer section-->
+    <footer id="footer">
+        <div class="container-fluid">
+            <!-- social media icons -->
+            <div class="social-icons mt-4">
+                <a href="https://www.https://www.facebook.com/GIEYAN.RIVERA" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.gmail.com/gieyanrivera0106@gmail.com" target="_blank"><i class="fab fa-gmail"></i></a>
+               
+            </div>
+        </div>
+    </footer>
